# backend/internal/accountservice/gen/http/openapi3.yaml
@@ -20,8 +20,8 @@ paths:
             schema:
               $ref: '#/components/schemas/LoginRequestBody'
             example:
-              email: Ab facilis odio facere et.
-              password: Iusto non mollitia qui non culpa laborum.
+              email: Iusto non mollitia qui non culpa laborum.
+              password: Corrupti voluptas officia nostrum quia voluptatum.
       responses:
         "200":
           description: OK response.
@@ -30,11 +30,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/LoginResponse'
               example:
-                accountID: In minus sint rerum.
-                email: Corrupti voluptas officia nostrum quia voluptatum.
-                refresh_token: Reiciendis harum asperiores.
-                role: Molestias exercitationem molestias.
-                token: Tempora recusandae nobis.
+                accountID: Ad quo et quasi sint accusamus.
+                email: Tempora recusandae nobis.
+                refresh_token: Molestias exercitationem molestias.
+                role: In minus sint rerum.
+                token: Reiciendis harum asperiores.
   /api/v1/account-service/accounts/register:
     post:
       tags:
@@ -48,11 +48,11 @@ paths:
             schema:
               $ref: '#/components/schemas/RegisterRequestBody'
             example:
-              confirmedPassword: Voluptates id recusandae temporibus et dolore.
-              email: Molestiae voluptas dolorum et.
-              firstName: Odit vel assumenda eum quibusdam.
-              lastName: Nemo provident eos quis ut ut ipsum.
-              password: Cumque quisquam dolorem adipisci.
+              confirmedPassword: Numquam quos excepturi vero ad est.
+              email: Dolorum et labore cumque quisquam dolorem adipisci.
+              firstName: Quibusdam omnis nemo provident eos quis ut.
+              lastName: Ipsum et molestiae.
+              password: Voluptates id recusandae temporibus et dolore.
       responses:
         "200":
           description: OK response.
@@ -61,7 +61,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
               example:
-                message: Numquam quos excepturi vero ad est.
+                message: Ab facilis odio facere et.
   /api/v1/account-service/playlists:
     get:
       tags:
@@ -77,28 +77,28 @@ paths:
                 $ref: '#/components/schemas/AccountPlaylistCollectionResponse'
               example:
                 resources:
-                - id: 175494993
-                  name: Cupiditate corporis aut vero.
+                - createdAt: Commodi id delectus dolor ex voluptatem eum.
+                  id: 561047437
+                  name: Enim consectetur sit omnis expedita.
                   trackIDs:
-                  - 1143493569
-                  - 375885238
-                  - 1360704122
-                  - 1026396222
-                - id: 175494993
-                  name: Cupiditate corporis aut vero.
+                  - 1854591721
+                  - 551277612
+                  - 1986047975
+                - createdAt: Commodi id delectus dolor ex voluptatem eum.
+                  id: 561047437
+                  name: Enim consectetur sit omnis expedita.
                   trackIDs:
-                  - 1143493569
-                  - 375885238
-                  - 1360704122
-                  - 1026396222
-                - id: 175494993
-                  name: Cupiditate corporis aut vero.
+                  - 1854591721
+                  - 551277612
+                  - 1986047975
+                - createdAt: Commodi id delectus dolor ex voluptatem eum.
+                  id: 561047437
+                  name: Enim consectetur sit omnis expedita.
                   trackIDs:
-                  - 1143493569
-                  - 375885238
-                  - 1360704122
-                  - 1026396222
-                total: 94649073
+                  - 1854591721
+                  - 551277612
+                  - 1986047975
+                total: 1198581461
     post:
       tags:
       - playlist
@@ -111,7 +111,7 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateAccountPlaylistRequestBody'
             example:
-              name: Cupiditate ipsam quis aut commodi id delectus.
+              name: Cum corporis autem repellendus.
       responses:
         "200":
           description: OK response.
@@ -120,7 +120,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
               example:
-                message: Repudiandae cum corporis autem repellendus.
+                message: Vel et est quasi unde odit sed.
   /api/v1/account-service/playlists/{playlistID}:
     delete:
       tags:
@@ -133,8 +133,8 @@ paths:
         required: true
         schema:
           type: integer
-          example: 12748060227119651034
-        example: 8236678158954975349
+          example: 16861361778222263426
+        example: 14645310068942176912
       responses:
         "200":
           description: OK response.
@@ -143,7 +143,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
               example:
-                message: Sed libero aut.
+                message: Aut accusamus sequi quae accusantium praesentium.
     get:
       tags:
       - playlist
@@ -157,8 +157,8 @@ paths:
         schema:
           type: integer
           description: Playlist ID
-          example: 10655420775183995652
-        example: 3836797041270251989
+          example: 5006136830838661682
+        example: 17030425305822026802
       responses:
         "200":
           description: OK response.
@@ -167,11 +167,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/AccountPlaylistResponse'
               example:
-                id: 1854428015
-                name: Voluptatem modi eos voluptas.
+                createdAt: Non praesentium quo molestiae.
+                id: 2072942933
+                name: Eos voluptas soluta.
                 trackIDs:
-                - 50130721
                 - 1564306613
+                - 991115872
     put:
       tags:
       - playlist
@@ -185,8 +186,8 @@ paths:
         schema:
           type: integer
           description: Playlist id to modify
-          example: 7704684998335207802
-        example: 16516932086741845725
+          example: 5161714125584465614
+        example: 5044420917136012476
       requestBody:
         required: true
         content:
@@ -194,7 +195,7 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateAccountPlaylistRequestBody'
             example:
-              name: Veniam est fuga vel et est quasi.
+              name: Voluptatem sequi adipisci iure dolorem nesciunt itaque.
       responses:
         "200":
           description: OK response.
@@ -203,7 +204,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
               example:
-                message: Nesciunt itaque ut quo praesentium commodi.
+                message: Et eius minima quo.
   /api/v1/account-service/playlists/{playlistID}/tracks/{trackID}:
     delete:
       tags:
@@ -218,8 +219,8 @@ paths:
         schema:
           type: integer
           description: Playlist ID to modify
-          example: 2692598097678787641
-        example: 5051741791793337935
+          example: 15270916825326370212
+        example: 9926222968472046256
       - name: trackID
         in: path
         description: Track ID to be deleted
@@ -227,8 +228,8 @@ paths:
         schema:
           type: integer
           description: Track ID to be deleted
-          example: 10786333947281042069
-        example: 15650167943340588770
+          example: 14460278771394442867
+        example: 16216240333212018809
       responses:
         "200":
           description: OK response.
@@ -237,7 +238,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
               example:
-                message: Nemo itaque.
+                message: A praesentium rerum accusamus occaecati velit et.
     post:
       tags:
       - playlist
@@ -251,8 +252,8 @@ paths:
         schema:
           type: integer
           description: Playlist ID to modify
-          example: 9311561343606939200
-        example: 2849784582405544594
+          example: 3635217761166779233
+        example: 4929482363712135635
       - name: trackID
         in: path
         description: Track ID to be added
@@ -260,8 +261,8 @@ paths:
         schema:
           type: integer
           description: Track ID to be added
-          example: 6750411468740961718
-        example: 6511314277505952185
+          example: 16140602761404116407
+        example: 8273025523250330751
       responses:
         "200":
           description: OK response.
@@ -270,7 +271,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
               example:
-                message: Dolor omnis deserunt consectetur.
+                message: Ea nostrum nemo itaque.
 components:
   schemas:
     AccountPlaylistCollectionResponse:
@@ -282,89 +283,87 @@ components:
             $ref: '#/components/schemas/AccountPlaylistResponse'
           description: Operation completion status
           example:
-          - id: 175494993
-            name: Cupiditate corporis aut vero.
+          - createdAt: Commodi id delectus dolor ex voluptatem eum.
+            id: 561047437
+            name: Enim consectetur sit omnis expedita.
             trackIDs:
-            - 1143493569
-            - 375885238
-            - 1360704122
-            - 1026396222
-          - id: 175494993
-            name: Cupiditate corporis aut vero.
+            - 1854591721
+            - 551277612
+            - 1986047975
+          - createdAt: Commodi id delectus dolor ex voluptatem eum.
+            id: 561047437
+            name: Enim consectetur sit omnis expedita.
             trackIDs:
-            - 1143493569
-            - 375885238
-            - 1360704122
-            - 1026396222
-          - id: 175494993
-            name: Cupiditate corporis aut vero.
-            trackIDs:
-            - 1143493569
-            - 375885238
-            - 1360704122
-            - 1026396222
+            - 1854591721
+            - 551277612
+            - 1986047975
         total:
           type: integer
           description: Number of resources
-          example: 1919527755
+          example: 333424829
           format: int32
       example:
         resources:
-        - id: 175494993
-          name: Cupiditate corporis aut vero.
+        - createdAt: Commodi id delectus dolor ex voluptatem eum.
+          id: 561047437
+          name: Enim consectetur sit omnis expedita.
           trackIDs:
-          - 1143493569
-          - 375885238
-          - 1360704122
-          - 1026396222
-        - id: 175494993
-          name: Cupiditate corporis aut vero.
+          - 1854591721
+          - 551277612
+          - 1986047975
+        - createdAt: Commodi id delectus dolor ex voluptatem eum.
+          id: 561047437
+          name: Enim consectetur sit omnis expedita.
           trackIDs:
-          - 1143493569
-          - 375885238
-          - 1360704122
-          - 1026396222
-        - id: 175494993
-          name: Cupiditate corporis aut vero.
+          - 1854591721
+          - 551277612
+          - 1986047975
+        - createdAt: Commodi id delectus dolor ex voluptatem eum.
+          id: 561047437
+          name: Enim consectetur sit omnis expedita.
           trackIDs:
-          - 1143493569
-          - 375885238
-          - 1360704122
-          - 1026396222
-        total: 1411058311
+          - 1854591721
+          - 551277612
+          - 1986047975
+        total: 1675693190
       required:
       - total
       - resources
     AccountPlaylistResponse:
       type: object
       properties:
+        createdAt:
+          type: string
+          description: Time of creation
+          example: Iure voluptates.
         id:
           type: integer
           description: Playlist id
-          example: 561438500
+          example: 893323924
           format: int32
         name:
           type: string
           description: Playlist name
-          example: Et dolor sed ut.
+          example: Fuga dolorem non iure tenetur.
         trackIDs:
           type: array
           items:
             type: integer
-            example: 714970104
+            example: 363905427
             format: int32
           description: Array of TrackIDs
           example:
-          - 727652748
-          - 1833225878
-          - 622960244
-          - 1302554155
+          - 317328226
+          - 1842496594
       example:
-        id: 1143984120
-        name: Voluptas officiis qui sequi quia voluptas.
+        createdAt: Et illo.
+        id: 1491752593
+        name: Animi fugiat rerum rerum vel.
         trackIDs:
-        - 109201509
-        - 1223825908
+        - 760748099
+        - 746536461
+        - 2079806465
+        - 1404166017
       required:
       - id
       - name
@@ -375,52 +374,55 @@ components:
         name:
           type: string
           description: Playlist name
-          example: Minima dolorum ut non.
+          example: Laudantium quis harum reprehenderit.
       example:
-        name: Dicta quisquam.
+        name: Maiores repudiandae eos.
     LoginRequestBody:
       type: object
       properties:
         email:
           type: string
           description: Email of the user
-          example: Debitis similique iure.
+          example: Ipsa quae.
         password:
           type: string
           description: Password of the user
-          example: Et molestiae expedita explicabo ut.
+          example: Recusandae excepturi deserunt.
       example:
-        email: Qui consectetur blanditiis nesciunt unde itaque.
-        password: Aperiam officia rem.
+        email: Sapiente doloribus consectetur corporis doloribus.
+        password: Et ipsa accusantium molestiae.
+      required:
+      - email
+      - password
     LoginResponse:
       type: object
       properties:
         accountID:
           type: string
           description: User's role
-          example: Recusandae excepturi deserunt.
+          example: Aut ut adipisci molestiae.
         email:
           type: string
           description: User's email
-          example: Commodi ut.
+          example: Asperiores incidunt.
         refresh_token:
           type: string
           description: Refresh token
-          example: Commodi iste delectus.
+          example: Omnis beatae.
         role:
           type: string
           description: User's role
-          example: Ipsa quae.
+          example: Explicabo at et dolor sed.
         token:
           type: string
           description: JWT Token
-          example: Enim aut itaque eveniet consequatur.
+          example: Perspiciatis itaque totam.
       example:
-        accountID: Omnis beatae.
-        email: Sapiente doloribus consectetur corporis doloribus.
-        refresh_token: Asperiores incidunt.
-        role: Perspiciatis itaque totam.
-        token: Et ipsa accusantium molestiae.
+        accountID: Quisquam non accusamus ut iste.
+        email: Amet id et voluptas.
+        refresh_token: Soluta pariatur inventore ad minima dolorum.
+        role: Non id.
+        token: Qui sequi quia voluptas dolorem minima.
       required:
       - email
       - token
@@ -432,29 +434,29 @@ components:
         confirmedPassword:
           type: string
           description: Confirmed password of the user
-          example: Assumenda vel reiciendis et quidem deleniti.
+          example: Voluptatem nisi molestias consequatur quae.
         email:
           type: string
           description: Email of the user
-          example: Debitis sed.
+          example: Animi architecto est perferendis ratione ut.
         firstName:
           type: string
           description: First name of the user
-          example: Ut eaque accusantium ullam et quod et.
+          example: Nemo dolore dolor impedit explicabo.
         lastName:
           type: string
           description: Last name of the user
-          example: Quia vel.
+          example: Excepturi et alias non sed quam.
         password:
           type: string
           description: Password of the user
-          example: Eligendi molestiae velit minus et excepturi.
+          example: Qui ut.
       example:
-        confirmedPassword: Animi architecto est perferendis ratione ut.
-        email: Nemo dolore dolor impedit explicabo.
-        firstName: Ducimus eos.
-        lastName: Qui corporis est debitis.
-        password: Excepturi et alias non sed quam.
+        confirmedPassword: Commodi ut.
+        email: Qui consectetur blanditiis nesciunt unde itaque.
+        firstName: Debitis similique iure.
+        lastName: Et molestiae expedita explicabo ut.
+        password: Aperiam officia rem.
       required:
       - email
       - password
@@ -467,9 +469,9 @@ components:
         message:
           type: string
           description: Operation completion status
-          example: Qui ut.
+          example: Enim aut itaque eveniet consequatur.
       example:
-        message: Voluptatem nisi molestias consequatur quae.
+        message: Commodi iste delectus.
       required:
       - message
 tags:
